--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "DEPLOY_ALL=1 truffle test"
+    "test": "DEPLOY_ALL=1 truffle test",
+    "deploy_rinkeby": "npx truffle migrate --f=3 --network rinkeby"
   },
   "repository": {
     "type": "git",
@@ -12,15 +13,14 @@
   },
   "author": "",
   "homepage": "https://fluxart.io",
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "truffle": "^5.3.2",
-    "truffle-hdwallet-provider": "^1.0.17",
-    "truffle-plugin-verify": "^0.5.6"
-  },
   "dependencies": {
     "@chainlink/contracts": "^0.1.6",
-    "@openzeppelin/contracts": "^4.0.0"
+    "@openzeppelin/contracts": "^4.0.0",
+    "@truffle/hdwallet-provider": "^1.2.3",
+    "dotenv": "^8.2.0",
+    "truffle": "^5.3.0",
+    "truffle-flattener": "^1.5.0",
+    "truffle-plugin-verify": "latest"
   },
   "engines": {
     "node": "14.15.x",
