--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "DEPLOY_ALL=1 truffle test",
-    "deploy_rinkeby": "npx truffle migrate --f=3 --network rinkeby"
+    "deploy_rinkeby": "npx truffle migrate --f=3 --network rinkeby",
+    "deploy": "npx truffle migrate --network live",
+    "verify": "npx truffle run verify FluxArtNFT SaleTokens --network live"
   },
   "repository": {
     "type": "git",
